k8s-disabled-apps/jspwiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jspwiki-ingress
  namespace: jspwiki
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: jspwiki.nasat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jspwiki
                port:
                  number: 80
